--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MANIRUL PORTFOLIO</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+        <h1>WELCOME TO</h1>
+        <h1><span class="orange-color">MANIRUL ISLAM</span> WORLD</h1>
+        <h3>Build Climber and Train Stopper</h3>
+        <p>I am a Build Climber and Train Stopper.I like to do hard work.Good work is my profession.So you trust me.Please give me your job.Waitimg for your good response.But anyone does not paid for this work. Iam a best WEB DEVELOPER. So you can hire me.</p>
+        <a class="link-button" href="https://www.google.com/">HIRE ME</a>
+    </div>
+    <div class="half-width">
+        <img src="images/my-bg.png">
+    </div>
+</section>
 </body>
 </html>
