--- a/index.html
+++ b/index.html
@@ -23,5 +23,16 @@
         <img src="images/my-bg.png">
     </div>
 </section>
+<section class="dream-big">
+    <div class="half-width">
+        <img src="images/jhankar2.png">
+    </div>
+    <div class="half-width">
+        <h1>DREAM BIG</h1>
+        <h3>BECOME A WEB DEVELOPER</h3>
+        <p> I interested in web developer.I already leamit the HTML.So we compleat the course.jffujfkjfkkjl ujfiolafoi oifjfiju a j;afio  faisofghiog iao iosd  ioasdoiiods .so help me anyway.</p>
+        <a class="link-button" href="https://www.youtube.com/">DOUNLOAD RESSUME</a>
+    </div>
+</section>
 </body>
 </html>
