--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
         <h1>WELCOME TO</h1>
         <h1><span class="orange-color">MANIRUL ISLAM</span> WORLD</h1>
@@ -23,7 +23,7 @@
         <img src="images/my-bg.png">
     </div>
 </section>
-<section class="dream-big">
+<section class="dream-big flexible-container">
     <div class="half-width">
         <img src="images/jhankar2.png">
     </div>
@@ -32,6 +32,21 @@
         <h3>BECOME A WEB DEVELOPER</h3>
         <p> I interested in web developer.I already leamit the HTML.So we compleat the course.jffujfkjfkkjl ujfiolafoi oifjfiju a j;afio  faisofghiog iao iosd  ioasdoiiods .so help me anyway.</p>
         <a class="link-button" href="https://www.youtube.com/">DOUNLOAD RESSUME</a>
+    </div>
+</section>
+<section class="experience-area">
+    <h1>EXPERIENCES</h1>
+    <div class="flexible-container">
+        <div id="web-developer" class="experience-item">
+            <h1>Full Stack WEB DEVELOPER</h1>
+            <h3 class="orange-color">2021-Present | pro level web developer</h3>
+            <p>I have compleated HTML,CSS,WORDPRESS.I know every thing needed to make developer website.Iam good web developer. please contact me to make a website.I can do hard work.So believe me.Give me your job.</p>
+        </div>
+        <div id="full-stack-experience" class="experience-item">
+            <h1>BABY WEB DEVELOPER</h1>
+            <h3 class="orange-color">2022-2024 | Programming hero DEVELOPER</h3>
+            <p>They din't offer me a job.But i made myself as a remove web developer.I made many website which showed you by me.what is your choice. i preffered your choice. give me a chance.</p>
+        </div>
     </div>
 </section>
 </body>
